--- a/README
+++ b/README
@@ -2,9 +2,9 @@
 
 ## Week 1
 
-- [ ] add .gitignore file
-- [ ] create virtual environment
-- [ ] add instruction to `README` for creating virtual environment
-- [ ] 02-Classification
-    - [ ] Bayesian Decision Rule
-    - [ ] Error rate of Bayes Classifier
+- add .gitignore file
+- create virtual environment
+- add instruction to `README` for creating virtual environment
+- 02-Classification
+    - Bayesian Decision Rule
+    - Error rate of Bayes Classifier
